Fix alignment of flex box blocks

--- a/source/stylesheets/home.css.scss
+++ b/source/stylesheets/home.css.scss
@@ -38,7 +38,7 @@ html, body {
 .blocks {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: center;
 
   max-width: 1050px;
   height: 100%;
